--- a/AgentsEAR/.settings/org.eclipse.wst.common.component
+++ b/AgentsEAR/.settings/org.eclipse.wst.common.component
@@ -9,5 +9,11 @@
             <dependent-object/>
             <dependency-type>uses</dependency-type>
         </dependent-module>
+        <dependent-module archiveName="json-20160212.jar" deploy-path="/lib" handle="module:/classpath/lib//home/misel/Downloads/json-20160212.jar">
+            <dependency-type>uses</dependency-type>
+        </dependent-module>
+        <dependent-module archiveName="jackson-all-1.9.9.jar" deploy-path="/lib" handle="module:/classpath/lib//home/misel/Downloads/jackson-all-1.9.9.jar">
+            <dependency-type>uses</dependency-type>
+        </dependent-module>
     </wb-module>
 </project-modules>
